# SPES

./: .gitignore  README.md
SPES-client/: README.md  angular.json  karma.conf.js  package-lock.json  package.json  tsconfig.app.json
SPES-server/: .gitignore  Dockerfile_1  README.md  requirements.txt  setup.cfg
SPES-server/openapis/: download-openapi-generator.sh  generate-client.sh  openapi.json
SPES-server/postgres-schema-generator/: download-schemaspy.sh  generate-schema.sh
SPES-server/src/openapi_server/: auth_handler.py  config.yml  containers.py  debug.log.2022-05-05  debug.log.2022-05-06  debug.log.2022-05-09  debug.log.2022-05-11  log-config.yml  main.py  security_api.py  startup.sql
SPES-server/src/openapi_server/apis/: auth_api.py  pf_api.py  report_api.py  wallet_api.py
SPES-server/src/openapi_server/database/: database.py  document.py  permission.py  person.py  person_address.py  person_citizenship.py  person_marital_status.py  redis.py  redis_deprecated.py  report.py  user.py
SPES-server/src/openapi_server/models/: address.py  citizenship.py  doc_info.py  extra_models.py  login.py  marital_status.py  permissio_info.py  pf_info.py  report_info.py  user_info.py
SPES-server/src/openapi_server/repositories/: document_repository.py  person_repository.py  report_repository.py  repository_exceptions.py  user_repository.py
SPES-server/src/openapi_server/services/: document_service.py  email_service.py  permission_service.py  person_service.py  report_service.py  user_service.py
SPES-server/src/openapi_server/utils/: utils.py
(+99 files in other folders)
